ckad/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busyboxpod
  name: busyboxpod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox2
    resources: {}
    volumeMounts:
        - mountPath: "/etc/foo"
          name: task-pv-storage
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busyboxpod
    resources: {}
    volumeMounts:
        - mountPath: "/etc/foo"
          name: task-pv-storage
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
